set new team's name as same as its Id on creation

--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -620,7 +620,7 @@ function createTeamsContent() {
     }
   });
   createNewTeam.click(function(event) {
-    $sb("Teams.Team("+newTeamName.val()+")");
+    $sb("Teams.Team("+newTeamName.val()+").Name").$sbSet(newTeamName.val());
     newTeamName.val("").focus();
   });
 
