--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -722,14 +722,14 @@ function createTeamsAssignDialog(teamId) {
     var type = dialog.find(">label[for='TeamsAssignDialogCheckbox"+dir+"']>span").text();
     var target = "Team"+$(this).data("team");
     $sb("Teams").$sb(type).$sb(dir).$sb(target).$sbSet(teamId);
-    dialog.dialog("destroy");
+    dialog.dialog("destroy").remove();
   });
 //FIXME - add way to register on specific element removal (not child removal) and destroy this dialog if removed,
 //FIXME - do same in TeamsRemoveDialog below
   dialog.dialog({
     modal: true,
     width: "700px",
-    buttons: { Close: function() { $(this).dialog("destroy"); } }
+    buttons: { Close: function() { $(this).dialog("destroy").remove(); } }
   });
 }
 
@@ -740,16 +740,16 @@ function createTeamsRemoveDialog(teamId) {
   $("<br>").appendTo(dialog);
   $("<button>").addClass("Yes").text("Yes, remove!").appendTo(dialog).click(function() {
     $sb("Teams.Team("+teamId+")").$sbRemove();
-    dialog.dialog("destroy");
+    dialog.dialog("destroy").remove();
   }).button();
   $("<button>").addClass("No").text("No, keep this team.").appendTo(dialog).click(function() {
-    dialog.dialog("destroy");
+    dialog.dialog("destroy").remove();
   }).button();
 
   dialog.dialog({
     modal: true,
     width: "500px",
-    buttons: { Close: function() { $(this).dialog("destroy"); } }
+    buttons: { Close: function() { $(this).dialog("destroy").remove(); } }
   });
 }
 
