--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -825,20 +825,61 @@ function createSaveLoadTab() {
 }
 
 function createSaveLoadContent() {
-  var sbSave = $sb("SaveLoad.Save");
-  var nameTr = $("<tr>").addClass("Name").appendTo("#SaveLoad")
-    .append($("<td>").attr("colspan", "3"));
-  $("<a>").text("Save ScoreBoard to Server File").appendTo(nameTr.children("td"));
+  // Download table
+  var sbDownloadTable = $("<table>").addClass("Download")
+    .appendTo($("<td>").appendTo($("<tr>").appendTo("#SaveLoad")));
+  $("<tr>").addClass("Name").appendTo(sbDownloadTable)
+    .append("<td colspan='5'>Download ScoreBoard XML</td>");
+  $("<tr>").addClass("Instruction").appendTo(sbDownloadTable)
+    .append("<td colspan='5'>To download, right-click and Save - to view XML, left-click</td>");
+  var contentRow = $("<tr>").addClass("Content").appendTo(sbDownloadTable);
 
-  var contentTr = $("<tr>").addClass("Content").insertAfter(nameTr)
-    .append($("<td>").addClass("Filename"))
-    .append($("<td>").addClass("Save"))
-    .append($("<td>").addClass("Message"));
-  $("<a>").text("Filename:").appendTo(contentTr.children("td.Filename"));
-  sbSave.$sb("Filename").$sbElement("<input type='text' size='20'>").appendTo(contentTr.children("td.Filename"));
-  sbSave.$sb("Save").$sbElement("<button>").text("Save").val("true").button().appendTo(contentTr.children("td.Save"));
-  sbSave.$sb("Message").$sbElement("<a>").appendTo(contentTr.children("td.Message"));
+  var links = [
+    { name: "All data", url: "" },
+    { name: "ScoreBoard", url: "scoreboard.xml?path=ScoreBoard" },
+    { name: "Teams", url: "teams.xml?path=Teams" },
+    { name: "Pages", url: "pages.xml?path=Pages" },
+    { name: "Stats", url: "stats.xml?path=Stats" }
+  ];
+  $.each( links, function() {
+    $("<td><a/></td>").appendTo(contentRow)
+      .children("a").html(this.name)
+      .attr({ href: "/SaveXml/"+this.url, target: "_blank" });
+  });
+  var allDataA = contentRow.find(">td:eq(0)>a");
+  var updateAllUrl = function() {
+    var d = new Date();
+    var name = $.datepicker.formatDate("yy-mm-dd_", d);
+    name += _timeConversions.twoDigit(d.getHours());
+    name += _timeConversions.twoDigit(d.getMinutes());
+    name += _timeConversions.twoDigit(d.getSeconds());
+    allDataA.attr("href", "/SaveXml/scoreboard-"+name+".xml");
+  };
+  setInterval(updateAllUrl, 1000);
 
+
+  // Upload table
+  var sbUploadTable = $("<table>").addClass("Upload")
+    .appendTo($("<td>").appendTo($("<tr>").appendTo("#SaveLoad")));
+  $("<tr>").addClass("Name").appendTo(sbUploadTable)
+    .append("<td>Upload ScoreBoard XML</td>");
+  var contentTd = $("<td>")
+    .appendTo($("<tr>").addClass("Content").appendTo(sbUploadTable));
+
+  var iframeId = "SaveLoadUploadHiddenIframe";
+  var uploadForm = $("<form method='post' enctype='multipart/form-data' target='"+iframeId+"'/>")
+    .append("<iframe id='"+iframeId+"' style='display: none'/>")
+    .append("<input type='file' name='xmlFile'/>")
+    .appendTo(contentTd);
+  $("<button>").html("Add/Merge").attr("data-method", "merge").appendTo(uploadForm).button();
+  $("<button>").html("Replace running scoreboard").attr("data-method", "load").appendTo(uploadForm).button();
+  uploadForm.children("button").click(function() {
+    uploadForm.attr("action", "/LoadXml/"+$(this).attr("data-method")).submit()
+      .children("input:file").val("").change();
+  });
+  _crgUtils.bindAndRun(uploadForm.children("input:file").button(), "change", function() {
+    uploadForm.children("button").button(this.value ? "enable" : "disable");
+  });
 }
 
 </script>
