update start html page

--- a/start.html
+++ b/start.html
@@ -1,6 +1,40 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2,url=http://localhost:8000/" />
+<title>
+CRG ScoreBoard Start Page
+</title>
+
+<script type="text/javascript" src="html/external/jquery/jquery.js" />
+
+<script type="text/javascript" >
+
+$(function() {
+});
+
+</script>
+
+<style type="text/css" >
+
+p#header { text-align: center; font-weight: bold; font-size: 30px; }
+p#header>img { height: 150px; }
+
+</style>
+
 </head>
+
+<body>
+
+<p id="header" >
+<img src="html/images/teamlogos/Carolina.png" />
+<br/>
+<a>Carolina Rollergirls Browser-based Roller Derby Scoreboard</a>
+<hr/>
+</p>
+
+<p id="NotStarted" >
+It appears the CRG ScoreBoard is not running.
+</p>
+
+</body>
 
 </html>
