add link back to main index page at top right add "Operator: " prefix to operator id

--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -893,7 +893,8 @@ function createSaveLoadContent() {
 <body>
 
 <div id="tabsDiv">
-  <div id="operatorIdDiv"><a id="operatorId"></a></div>
+  <div id="operatorIdDiv">Operator: <a id="operatorId"></a></div>
+  <a id="indexLink" href="../index.html">Back to index page</a>
   <ul id="tabBar"></ul>
 </div>
 
